# constant

./: .gitignore  CMakeLists.txt  Dependency.cmake  index.html  package-lock.json  package.json
dependency/imgui-1.91.8-docking/: imgui.cpp  imgui_impl_glfw.cpp
resources/shader/: light.fs  light.vs  phong_lighting.fs  phong_lighting.vs  simple.fs  simple.vs
server-src/: init.js  middleware.js  server.js
server-src/controllers/: rootController.js
server-src/routers/: rootRouter.js
src/: app.cpp  app.h  bind_function.cpp  buffer.cpp  buffer.h  custom_ui.cpp  custom_ui.h  file_loader.cpp  file_loader.h  font_icon.cpp  font_icon.h  font_manager.cpp  font_manager.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  lcrs_tree.cpp  lcrs_tree.h  logger_config.cpp  logger_config.h  mac_helper.h  mac_helper.mm  main.cpp  mesh.cpp  mesh.h  post-js.js  render_material.cpp  render_material.h  scene_tree.cpp  scene_tree.h  scene_window.cpp  scene_window.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex_layout.cpp  (+2 more)
src/config/: gl_config.h  log_config.h  size_config.cpp  size_config.h
src/enum/: app_enums.h  mesh_enums.h  tree_enums.h
src/icon/: IconFileParser.py  IconsCodicons.h  IconsFontAwesome4.h  IconsFontAwesome5.h  IconsFontAwesome5Brands.h  IconsFontAwesome6.h  IconsFontAwesome6Brands.h  IconsMaterialSymbols.h
src/macro/: ptr_macro.h  singleton_macro.h
src/platform/: mac_helper.h  mac_helper.mm  win_helper.cpp  win_helper.h
src/util/: file_util.cpp  file_util.h  path_util.cpp  path_util.h
